[project]
name = "qwc-elevation-service"
version = "v2024.11.18"
description = "QWC Elevation Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.6.0",
    "qwc-services-core~=1.3.34"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
